# ssr2

./: Cargo.toml  justfile
.github/workflows/: rust.yml
crates/ratatui-inputs/: Cargo.toml
crates/ratatui-inputs/src/: blank_field.rs  lib.rs  multiline_input.rs
crates/ratatui-inputs/src/blocks_wrapper/: mod.rs
crates/ratatui-inputs/src/blocks_wrapper/block_wrapper/: mod.rs  one_of_wrapper.rs  paragraph_wrapper.rs
crates/ratatui-inputs/src/blocks_wrapper/block_wrapper/answered_block_wrapper/: answered_paragraph_wrapper.rs
crates/s_text_input_f/: Cargo.toml
crates/s_text_input_f-parser/: Cargo.toml  llms.txt
crates/s_text_input_f-parser/src/: any_of.rs  lib.rs  main.rs  one_of.rs
crates/s_text_input_f/src/: lib.rs
crates/ssr/: Cargo.toml  justfile
crates/ssr-algorithms/: Cargo.toml
crates/ssr-algorithms/src/fsrs/: level.rs  mod.rs  stateless.rs  weights.rs
crates/ssr-algorithms/src/leitner_system/: level.rs  mod.rs
crates/ssr-algorithms/src/super_memory_2/: level.rs  mod.rs
crates/ssr-core/: Cargo.toml
crates/ssr-core/src/: lib.rs
crates/ssr-core/src/task/: mod.rs
crates/ssr-facade/: Cargo.toml
crates/ssr-facade/src/: lib.rs  stateful.rs  stateless.rs
crates/ssr-one-of/: Cargo.toml
crates/ssr-one-of/src/: main.rs
crates/ssr/src/: main.rs
crates/telegram-interactions/: Cargo.toml
crates/telegram-interactions/src/: lib.rs
