[workspace]
resolver = "3"
members = [
    "crates/ssr",
    "crates/ratatui-inputs",

    "crates/ssr-algorithms",

    "crates/ssr-core",
    "crates/ssr-facade",
    "crates/s_text_input_f",
    "crates/s_text_input_f-parser",
]
default-members = ["crates/ssr"]

[workspace.dependencies]
ssr-core = { path = "crates/ssr-core" }
ssr-facade = { path = "crates/ssr-facade" }
ssr-algorithms = { path = "crates/ssr-algorithms" }
s_text_input_f = { path = "crates/s_text_input_f" }
s_text_input_f-parser = { path = "crates/s_text_input_f-parser" }
ratatui = "0.28.0"
serde = { version = "1.0.0", features = ["derive"] }
