[package]
name = "ratatui_inputs"
description = "ratatui library to process sineptic text input format"
license = "MIT"
version = "0.3.1"
edition = "2024"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
readonly = "0.2"
s_text_input_f.workspace = true
s_text_input_f-parser.workspace = true

[features]
fast_tab_scroll = []
fast_select_with_enter = []
