[package]
name = "ssr-algorithms"
description = "spaced repetition algorithms"
license = "MIT"
version = "0.8.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fsrs = "1.4"
itertools = "0.13"
rand = "0.8"
s_text_input_f.workspace = true
serde.workspace = true
ssr-core.workspace = true
