[package]
name = "ssr-facade"
description = "implementation of ssr-core TasksFacade trait"
version = "0.10.2"
license = "MIT"
edition = "2024"

[dependencies]
itertools = "0.13"
rand = "0.8"
s_text_input_f = "0.3"
serde = { version = "1.0", features = ["derive"] }
ssr-core = "0.38"
# ssr-core = { path = "../ssr-core/" }
