[package]
name = "ssr"
version = "0.5.1"
edition = "2024"

[dependencies]
crossterm = "0.28"
alternate_screen_wrapper = { version = "0.1", features = ["crossterm"]}
ratatui = "0.29"

s_text_input_f = "0.3"
s_text_input_f-parser = "0.2"
anyhow = "1"

serde_json = "1"
clap = { version = "4.5", features = ["derive", "string"] }

ssr-core = "0.38"
ssr-algorithms = "0.8.1"
ssr-facade = "0.10.1"
# ssr-core = { path = "../ssr-core/" }
# ssr-algorithms = { path = "../ssr-algorithms/" }
# ssr-facade = { path = "../ssr-facade/" }
tempfile = "3.14.0"

[dependencies.ratatui_inputs]
version = "0.3.1"
# path = "../ratatui-inputs/"
features = ["fast_select_with_enter"]
