[package]
name = "ssr"
version = "0.5.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
crossterm = "0.28"
alternate_screen_wrapper = { version = "0.1", features = ["crossterm"] }
ratatui.workspace = true

s_text_input_f.workspace = true
s_text_input_f-parser.workspace = true
anyhow = "1"

serde_json = "1"
clap = { version = "4.5", features = ["derive", "string"] }

ssr-core.workspace = true
ssr-algorithms.workspace = true
ssr-facade.workspace = true
tempfile = "3.14.0"

[dependencies.ratatui_inputs]
path = "../ratatui-inputs/"
features = ["fast_select_with_enter"]
